Correct gradle configuration.